tests/exposure_test_with_multiple_policies_1_with_matching_pod/matching_pod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: matching-ns
  labels:
    env: env-1
    tier: web
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-workload
  namespace: matching-ns
  labels:
    app: matching
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matching
  template:
    metadata:
      labels:
        app: matching
    spec:
      containers:
      - name: matching
        image: quay.io/shfa/matching:latest
        ports:
        - name: http
          containerPort: 8090
---
