test_outputs/connlist/exposure_test_with_multiple_policies_1_with_matching_pod_exposure_output.txt
0.0.0.0-255.255.255.255[External] => matching-ns/matching-workload[Deployment] : All Connections
matching-ns/matching-workload[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
matching-ns/matching-workload[Deployment] => hello-world/workload-a[Deployment] : All Connections

Exposure Analysis Result:
Egress Exposure:
matching-ns/matching-workload[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
matching-ns/matching-workload[Deployment] 	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/workload-a[Deployment]        	<= 	[namespace with {{Key:env,Operator:In,Values:[env-1 env-2],},{Key:tier,Operator:Exists,Values:[],}}]/[all pods] : All Connections
matching-ns/matching-workload[Deployment] 	<= 	0.0.0.0-255.255.255.255[External] : All Connections
matching-ns/matching-workload[Deployment] 	<= 	entire-cluster : All Connections

Workloads not protected by network policies:
matching-ns/matching-workload[Deployment] is not protected on Egress
matching-ns/matching-workload[Deployment] is not protected on Ingress
